--- a/jen.html
+++ b/jen.html
@@ -180,22 +180,23 @@
   <div class="page2" id="page7">
     <div class="card column">
       <h3>Запишись на первое бесплатное занятие</h3>
-      <div class="form">
+      <form id="studentForm" class="form" action="http://localhost:3000/newStudent" method="post">
         <input 
           type="tel" 
           id="phoneInput" 
           placeholder="+7 (___) ___-__-__" 
           maxlength="18"
           required
+          name="phone"
         >
-          <select id="courseDropdown" required>
+          <select id="courseDropdown" required name="city">
             <option value="" disabled selected>Выберите город</option>
             <option value="minecraft">Наро-Фоминск</option>
             <option value="roblox">Обнинск</option>
             <option value="unity">Селятино</option>
           </select>
-          <button id="submitBtn">Оставить заявку</button>
-      </div>
+          <button type="submit" id="submitBtn">Оставить заявку</button>
+        </forms>
     </div>
   </div>
   <div class="page2" id="page8">
@@ -832,6 +833,31 @@ const revert = function() {
 
   e.target.value = formatted.substring(0, 18);
 });
+document.getElementById('submitBtn').addEventListener('click', async (e) => {
+    e.preventDefault();
+      const form = document.getElementById('studentForm');
+      const formData = new FormData(form);
+      const data = Object.fromEntries(formData.entries());
+
+      try {
+        const response = await fetch('http://localhost:3000/newStudent', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify(data),
+        });
+
+        const result = await response.json();
+        document.getElementById('result').innerHTML = `
+          <p style="color: green;">${result.message}</p>
+        `;
+      } catch (error) {
+        document.getElementById('result').innerHTML = `
+          <p style="color: red;">Ошибка: ${error.message}</p>
+        `;
+      }
+    });
 </script>
 </body>
 </html>
