--- a/jen.html
+++ b/jen.html
@@ -26,11 +26,13 @@
         <li><p id="contact">Контакты</p></li>
       </ul>
     </div>
-    <div class="phoneButton">
+    <button href="tel:+79957578746" class="phoneButton">
       <p style="margin: 12px;">+7 995 757 87 46</p>
-    </div>
+    </button>
   </nav>
-
+  <a href="tel:+79957578746" class="floating-call-button" aria-label="Позвонить нам">
+    📞
+  </a>
   <!-- Главный экран -->
   <div class="page1" id="page1">
     <div id="mobile_logo">
@@ -151,7 +153,7 @@
 Оставьте заявку, мы вам перезвоним
 и поможем выбрать подходящий курс
       </h3>
-      <button>Оставить заявку</button>
+      <button onclick="setScroll(2500)">Оставить заявку</button>
     </div>
   </div>
   <div class="page2" id="page6">
